update error code nutrients
